[gd_scene load_steps=7 format=3 uid="uid://cxtoxbmu4x383"]

[ext_resource type="Script" path="res://ui/combat_ui/combat_ui.gd" id="1_r7tbi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_en2cm"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e66ls"]
bg_color = Color(0.1494, 0.83, 0.262833, 1)

[sub_resource type="Animation" id="Animation_sm7jf"]
resource_name = "ACTION_BAR_FLASH"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.509804, 0.509804, 0.509804, 1), Color(1, 1, 1, 1), Color(0.509804, 0.509804, 0.509804, 1)]
}

[sub_resource type="Animation" id="Animation_2ytw4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kqpao"]
_data = {
"ACTION_BAR_FLASH": SubResource("Animation_sm7jf"),
"RESET": SubResource("Animation_2ytw4")
}

[node name="CombatUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r7tbi")

[node name="ActionBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -164.0
offset_right = 160.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_en2cm")
theme_override_styles/fill = SubResource("StyleBoxFlat_e66ls")
step = 0.001
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ActionBar"]
libraries = {
"": SubResource("AnimationLibrary_kqpao")
}

[node name="BlackOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.0901961)

[node name="ActionsContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -110.5
offset_right = 96.0
offset_bottom = 110.5
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="ActionsLabel" type="Label" parent="ActionsContainer"]
layout_mode = 2
text = "ACTIONS"

[node name="HBoxContainer" type="HBoxContainer" parent="ActionsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ActionButtons" type="VBoxContainer" parent="ActionsContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="AttacksButton" type="Button" parent="ActionsContainer/HBoxContainer/ActionButtons"]
layout_mode = 2
text = "Attacks"

[node name="MiscButton" type="Button" parent="ActionsContainer/HBoxContainer/ActionButtons"]
layout_mode = 2
text = "Misc."

[node name="YesButton" type="Button" parent="ActionsContainer/HBoxContainer/ActionButtons"]
visible = false
layout_mode = 2
focus_neighbor_top = NodePath("../MiscButton")
text = ";)"

[node name="EndTurnButton" type="Button" parent="ActionsContainer/HBoxContainer/ActionButtons"]
layout_mode = 2
focus_mode = 0
disabled = true
text = "End Turn"

[node name="AttackOptions" type="VBoxContainer" parent="ActionsContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 4
alignment = 1

[node name="MiscOptions" type="VBoxContainer" parent="ActionsContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerHealthLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "HP: "

[node name="UtilityLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Utility:"

[connection signal="focus_entered" from="ActionsContainer/HBoxContainer/ActionButtons/AttacksButton" to="." method="_on_attacks_button_focus_entered"]
[connection signal="pressed" from="ActionsContainer/HBoxContainer/ActionButtons/AttacksButton" to="." method="_on_attacks_button_pressed"]
[connection signal="focus_entered" from="ActionsContainer/HBoxContainer/ActionButtons/MiscButton" to="." method="_on_misc_button_focus_entered"]
[connection signal="pressed" from="ActionsContainer/HBoxContainer/ActionButtons/MiscButton" to="." method="_on_misc_button_pressed"]
[connection signal="focus_entered" from="ActionsContainer/HBoxContainer/ActionButtons/YesButton" to="." method="_on_yes_button_focus_entered"]
[connection signal="pressed" from="ActionsContainer/HBoxContainer/ActionButtons/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="focus_entered" from="ActionsContainer/HBoxContainer/ActionButtons/EndTurnButton" to="." method="_on_end_turn_button_focus_entered"]
[connection signal="pressed" from="ActionsContainer/HBoxContainer/ActionButtons/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
